--- a/styles/cls.css
+++ b/styles/cls.css
@@ -46,10 +46,10 @@ i{
     position: relative;
     margin-left: -27px;
 }
-#eye{
+/* #eye{
  position: relative;
 
-}
+} */
 h1{
     margin-bottom: 10px;
 }
