--- a/styles/calculater.css
+++ b/styles/calculater.css
@@ -4,39 +4,54 @@
     box-sizing: border-box;
 }
 body{
-    height: 100%;
-    width: 100%;
-    background-color:black;
+    background-color: aquamarine;
 }
-.container{
-    height: 100px;
-    width: 50px;
-    /* background-color: blue; */
-    margin-top: 250px;
-    margin-left: 500px;
-}
-input{
-    width: 300px;
-    height: 40px;
-    margin: 20px;
-    border-radius: 30px;
-    border: solid 3px white;
-    margin-right: 90px;
-}
-  #buttons{
-    height: 150px;
-    width: 150px;
-    display: inline-block;
-    
 
-}  
-#one{
-    height: 20px;
-    width: 20px;
-    display: inline-block;
-    /*  */
+.screen{
+    margin-left: 38vw;   
+    margin-top: 28vh;
+    
 }
-two{
-    height: 20px;
-    width: 20px;
+
+.calculator{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(49, 48, 48);
+    width: 270px;
+    padding: 30px;
+    border: none;  
+    /* border-radius: 15px;  */
+}
+
+input{
+    background-color: #ecf0f3 ;
+    width: 200px; 
+    height: 40px; 
+    /* box-shadow: inset 5px 5px 12px rgba(0, 0, 0, .16);  */
+    border: none;  
+    /* border-radius: 15px;  */
+    color: rgb(70, 70, 70);
+    font-size: 30px;
+    text-align: right;
+    padding: 10px;
+    /* margin-bottom: 20px; */
+
+}
+
+button{
+    width: 43px;
+    height: 50px;
+    margin: 2px;
+    background-color: #ecf0f3 ;
+    /* box-shadow: inset 5px 5px 12px rgba(0, 0, 0, .16);  */
+    border: none;  
+    /* border-radius: 50%; */
+    font-size: 16px;
+}
+
+#equal{
+    width: 88px;
+}
+
+button:hover{
+    color:aquamarine;
 }
