--- a/styles/preview.css
+++ b/styles/preview.css
@@ -3,11 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background-color: aquamarine;
-}
 
-.screen{
+.wraper{
     margin-left: 38vw;   
     margin-top: 28vh;
     
@@ -18,34 +15,35 @@ body{
     background-color: rgb(49, 48, 48);
     width: 270px;
     padding: 30px;
+    /* box-shadow: inset 5px 5px 12px #ffffff; */
+    /* box-shadow: inset 5px 5px 12px rgba(0, 0, 0, .16);  */
     border: none;  
-    border-radius: 10px;
-    /* border-radius: 15px;  */
+    border-radius: 15px; 
 }
 
 input{
     background-color: #ecf0f3 ;
     width: 200px; 
     height: 40px; 
-    /* box-shadow: inset 5px 5px 12px rgba(0, 0, 0, .16);  */
+    box-shadow: inset 5px 5px 12px rgba(0, 0, 0, .16); 
     border: none;  
-    /* border-radius: 15px;  */
+    border-radius: 15px; 
     color: rgb(70, 70, 70);
     font-size: 30px;
     text-align: right;
     padding: 10px;
-    /* margin-bottom: 20px; */
+    margin-bottom: 20px;
 
 }
 
 button{
     width: 43px;
-    height: 50px;
+    height: 38px;
     margin: 2px;
     background-color: #ecf0f3 ;
-    /* box-shadow: inset 5px 5px 12px rgba(0, 0, 0, .16);  */
+    box-shadow: inset 5px 5px 12px rgba(0, 0, 0, .16); 
     border: none;  
-    /* border-radius: 50%; */
+    border-radius: 50%;
     font-size: 16px;
 }
 
@@ -54,5 +52,5 @@ button{
 }
 
 button:hover{
-    color:aquamarine;
+    color: #22A39F;
 }
