--- a/styles/random.css
+++ b/styles/random.css
@@ -22,3 +22,8 @@ button{
 button:hover{
     background-color:#22A39F ;
 }
+p{
+    position: absolute;
+    margin-left: 650px;
+    margin-top: 270px;
+}
