--- a/styles/introforge.css
+++ b/styles/introforge.css
@@ -5,58 +5,65 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body{
     font-family: 'Poppins', sans-serif;
-    height: 100vh;
-    width: 100vw;
 }
+.container{
+    width: 80%;
+    margin: auto;
+    overflow: hidden;
+}
+ header{
+    background-color: #7e7eff;
+    min-height: 65px;
+ }
 
 #h1-intro{
     float: left;
-    font-size: 13px;
-    padding-top: 10px;
-    padding-left: 130px;
+    margin-left: 6.2rem;
+    margin-top: 0.8rem;
 }
 
 #nav-1{
-    float: right;
-    padding-right: 150px;
-    padding-top: 15px;
+    margin-left: 39.8rem;
+padding-top: 20px;
+   
 }
-
-#nav-1 a{
+a{
+    margin-left: 20px;
     color: #ffffff;
-    margin-right: 20px;
     text-decoration: none;
 }
 
-#nav-1 a:hover{
-    color: #000000;
-}
-
-.header{
-    height: 67px;
-    background-color: #7e7eff;
+section{
+    min-height: 16em;
+    margin: 20px 0px;
+    display: block;
 }
 
 #showcase{
-    margin-top: 60px;
+    min-height: 150px;
     text-align: center;
+    margin-top: 100px;
 }
 
 h2{
-    font-size: bold;
-    font-size: 35px;
+    font-weight:bold;
+    font-size: 40px;
 }
 
-#showcase p{
-    font-size: 18px;
+p{
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+#showcase span{
+    font-size: 25px;
+    font-weight: 600;
 }
 
 button{
     padding: 10px;
-    font-size: 15px;
+    font-size: 20px;
     font-family: 'Poppins', sans-serif;
     font-weight: bolder;
     border-radius: 5px;
@@ -64,57 +71,56 @@ button{
     color: #fff;
     border: 0;
     cursor: pointer;
-    margin-top: 12px;
+}
+
+button:hover{
+    box-shadow: 0px 0px 3px 2px #ffa600;
 }
 
 #our-clients{
+    min-height: 450px;
     text-align: center;
-    margin-top: 60px;
     background-color: #fef0d6;
-    height: 400px;
 }
-
 #our-clients img{
-    height: 30vh;
-    width: 18vw;
-    margin: 20px;
+    width: 20%;
+    height: 10%;
+    padding: 0px 20px;
 }
 
 h3{
-    font-weight: bold;
-    font-size: 30px;
-    padding-top: 20px;
-
-}
-
-#our-services{
-    height: 500px;
-
+    font-size: 35px;
+    padding-top: 30px;
 }
 
 .container{
-    width: 80%;
-    overflow: hidden;
-    margin: auto;
-    
+    min-height: 500px;
+    margin: 0px 30px;
 }
 
 #our-services .box{
-    float: left;
     width: 33%;
+    float: left;
     text-align: center;
     padding: 10px;
 }
 
-#our-services img{
-    width: 150px;
+#our-services .box img{
+    width: 16em;
+}
+
+#our-services .box p{
+    font-size: 15px;
+    font-weight: lighter;
 }
 
 h4{
-font-size: 30px;
-font-weight: bold;
-text-align: center;
-padding-top: 30px;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 35px;
+}
+h5{
+    margin-bottom: 10px;
 }
 
 footer{
@@ -123,3 +129,10 @@ footer{
     color: #fff;
     padding: 20px;
 }
+
+@media screen and(max-width:700px) {
+ .container{
+    clear: both;
+ }
+}
+
