--- a/styles/piano.css
+++ b/styles/piano.css
@@ -6,7 +6,7 @@
 
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-     background-color: #FFC6D3; 
+     background-image: url(http://www.pixelstalk.net/wp-content/uploads/2016/06/HD-Wallpaper-Computer-Desktop-Wallpapers.jpg); 
 }
 
 .wrapper{
